# backpack

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CMakeLists.txt  LICENSE  README.md  codecov.yml
.github/workflows/: docs.yml
cmake/Modules/: CodeCoverage.cmake
docs/: .buildinfo  annotated.html  bp__array_8h.html  bp__array_8h__dep__incl.dot  bp__array_8h__incl.dot  bp__heap_8h.html  bp__heap_8h__incl.dot  bp__iter_8h.html  bp__iter_8h__dep__incl.dot  bp__iter_8h__incl.dot  bp__ring_8h.html  bp__ring_8h__incl.dot  bp__stack_8h.html  bp__stack_8h__incl.dot  bp__types_8h.html  bp__types_8h__dep__incl.dot  bp__types_8h__incl.dot  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  doxygen.css  files.html  functions.html  functions_vars.html  genindex.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  index.html  menu.js  menudata.js  objects.inv  search.html  searchindex.js  structbp__array__t-members.html  structbp__array__t.html  (+9 more)
docs/_static/: basic.css  language_data.js  searchtools.js
docs/api/: array.html  heap.html  index.html  ring.html  stack.html
docs/search/: all_0.html  all_0.js  all_1.html  all_1.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_6.js  all_7.html  all_7.js  all_8.html  all_8.js  classes_0.html  classes_0.js  defines_0.html  defines_0.js  defines_1.html  defines_1.js  enums_0.html  enums_0.js  enumvalues_0.html  enumvalues_0.js  files_0.html  files_0.js  functions_0.html  functions_0.js  search.css  search.js  searchdata.js  typedefs_0.html  typedefs_0.js  typedefs_1.html  typedefs_1.js  typedefs_2.html  (+13 more)
docs/sphinx/: Doxyfile.in  Doxyfile.out  conf.py  index.rst  requirements.txt
docs/sphinx/_build/xml/: bp__array_8h.xml  bp__heap_8h.xml  bp__iter_8h.xml  bp__ring_8h.xml  bp__stack_8h.xml  bp__types_8h.xml  combine.xslt  compound.xsd  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_b0856f6b0d80ccb263b2f415c91f9e17.xml  index.xml  index.xsd  structbp__array__t.xml  structbp__heap__t.xml  structbp__iter.xml  structbp__ring__t.xml
docs/sphinx/api/: array.rst  heap.rst  index.rst  ring.rst  stack.rst
docsrc/: Doxyfile.in  conf.py  requirements.txt
docsrc/api/: heap.rst  stack.rst
examples/: array.c
src/: bp_array.c  bp_heap.c  bp_ring.c  bp_stack.c
src/include/: bp_array.h  bp_heap.h  bp_iter.h  bp_iter2.h  bp_ring.h  bp_stack.h  bp_types.h
test/: test_array.cpp  test_heap.cpp  test_ring.cpp  test_runner.cpp  test_stack.cpp
test/array/: array_iter.cpp  array_size.cpp  clear_array.cpp  create_array.cpp  del_element.cpp  find_element.cpp  get_element.cpp  push_element.cpp  start_array.cpp
test/ring/: ring_iter.cpp
